# autobuilderv2

./: .gitignore  AUTOMATION.md  CHANGELOG.md  README.md  VERSION  pyproject.toml
adapters/: __init__.py  base.py  registry.py
agent_runtime/: action_router.py  authority_boundary.py  recovery.py  replay.py  task_graph.py
archetypes/: __init__.py  catalog.py
benchmarks/: cases.py  enterprise_cases.py  execution_cases.py  recovery_cases.py  report.py  runner.py  scorecard.py  scoring.py  security_cases.py
chat_build/: conversation_state.py  diff_render.py  intake_parser.py  output_lane.py  preview_contract.py  spec_mapper.py  unsupported_request.py
chat_builder/: __init__.py  compiler.py  models.py  project_memory.py  steering.py  workflow.py
claims/: coverage_matrix.json  validator.py
cli/: autobuilder.py  inspect.py  mission.py  resume.py  run.py
control_plane/: approval_engine.py  approval_rules.py  approvals.py  control.py  decision_log.py
debugger/: classifier.py  failures.py  repair.py
docs/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  MICRO_GAPS_MUST_FINISH.md  MUST_FINISH_10_OF_10.md  MUST_FINISH_10_OF_10_FULL.md  NEXUS_EXECUTION.md  NEXUS_MODE.md  OPERATOR_WORKFLOW.md  ROADMAP.md  SPEC_COMPILER.md  SYSTEM_DOCTRINE.md  operator.md
execution/: artifacts.py  contracts.py  executor.py  lineage.py
generator/: __init__.py  executor.py  plan.py  template_packs.py
ir/: __init__.py  compiler.py  model.py
memory/: json_memory.py  policy.py  store.py
mutation/: change_set.py  classifier.py  enforced_mutation.py  invariants.py  postwrite_verify.py  preflight.py  provenance.py  safety.py
nexus/: mode.py
observability/: events.py  lineage.py
ops/: incident_response.md  release_scorecard.py  rollback.py
(+199 files in other folders)
