[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autobuilderv2"
version = "0.1.0"
description = "Deterministic multi-lane app builder and autonomous execution platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
	{ name = "AutobuilderV2 Team" }
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Build Tools"
]
dependencies = [
	"PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0",
	"ruff>=0.6",
	"mypy>=1.10"
]

[project.scripts]
autobuilder = "cli.autobuilder:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
	"archetypes*",
		"adapters*",
	"benchmarks*",
	"chat_builder*",
	"cli*",
	"control_plane*",
	"debugger*",
	"execution*",
	"generator*",
	"ir*",
	"memory*",
	"mutation*",
	"nexus*",
	"observability*",
	"orchestrator*",
	"platform_hardening*",
	"platform_plugins*",
	"planner*",
	"policies*",
	"quality*",
	"readiness*",
	"runs*",
	"specs*",
	"stack_registry*",
	"state*",
	"universal_capability*",
	"validator*"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = false
ignore_missing_imports = true
pretty = true
